--- a/src/test/index.html
+++ b/src/test/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <script src="./dist/core.bundle.js"></script>
+    <script src="http://localhost:8080/webpack-dev-server.js"></script>
   </head>
-  <body>
-    <div id="app">test</div>
+  <body style="font-size: 20px;">
+    <div id="app"></div>
   </body>
   <script src="./scripts/test.js"></script>
 </html>
