最小量化去更新dom节点

--- a/test/index.html
+++ b/test/index.html
@@ -7,4 +7,7 @@
     <div id="app"></div>
   </body>
   <script src="./scripts/test.js"></script>
+  <style>
+    input { font-size: 40px; margin: 40px 0; }
+  </style>
 </html>
